# sfml_game

./: CMakeLists.txt  README.md  SuperBubbleFighting.sln
Data/: config.ini
SuperBubbleFighting/: Collision.h  Game.cpp  Game.h  ResourceManager.cpp  SuperBubbleFighting.vcxproj  SuperBubbleFighting.vcxproj.filters  main.cpp  map1.xml  objects.slmp  stdafx.h  text.slmp
SuperBubbleFighting/GUI/: Button.cpp  Button.h  DropDown.cpp  DropDown.h  ObjectCreator.cpp  ObjectCreator.h  PlayerHealtBar.cpp  PlayerHealtBar.h  TextureSelector.cpp  TextureSelector.h  TopBar.cpp  TopBar.h
SuperBubbleFighting/animation/: Animation.cpp  Animation.h  AnimationManager.cpp  AnimationManager.h
SuperBubbleFighting/components/: AnimationComponent.cpp  AnimationComponent.h  MovementComponent.cpp  MovementComponent.h
SuperBubbleFighting/entities/: Bubble.cpp  Bubble.h  Bullet.cpp  Enemy.cpp  Enemy.h  Entity.cpp  Entity.h  Level.cpp  Level.h  MapEditor.cpp  MapEditor.h  Player.cpp  Player.h  Tile.cpp  Tile.h
SuperBubbleFighting/resource/: ResourceManager.cpp  ResourceManager.h  SettingsParsers.cpp  SettingsParsers.h
SuperBubbleFighting/states/: EditorState.cpp  EditorState.h  GameState.cpp  GameState.h  MainMenuState.cpp  MainMenuState.h  SettingsState.cpp  SettingsState.h  State.cpp  State.h  TestState.cpp  TestState.h
res/animation/: SuperBubbleFighting - Shortcut.lnk  anim.xml  run.xml  skeleton.xml
src/: Bullet.cpp  Bullet.h  Button.cpp  Button.h  Collision.h  Game.cpp  Game.h  GameState.cpp  GameState.h  MainMenuState.cpp  Map.h  Player.cpp  Player.h  State.h  main.cpp
(+33 files in other folders)
